--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         #image-container {
             margin-top: 20px;
             display: flex;
+            flex-wrap: wrap;
             align-items: center; /* Align the centers of the images */
         }
 
